--- a/testinstagram.html
+++ b/testinstagram.html
@@ -296,7 +296,15 @@ Come spend a lovely Mothering Sunday with us.
 -->
  
 
+<DIV class="boxPanel">
+ <TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0019-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">Recent Instagram Photos</DIV></TD></TR>
+</TABLE>
 <div id="instafeed"></div>
+</DIV>
+ 
+ 
  
 <script type="text/javascript">
     var userFeed = new Instafeed({
