--- a/testinstagram.html
+++ b/testinstagram.html
@@ -310,7 +310,8 @@ Come spend a lovely Mothering Sunday with us.
     var userFeed = new Instafeed({
         get: 'user',
         userId: '3153218281',
-        accessToken: '3153218281.1677ed0.a7ca15e521d244b69f85ef6fa1a54ba4'
+        accessToken: '3153218281.1677ed0.a7ca15e521d244b69f85ef6fa1a54ba4',
+        limit: 10
     });
     userFeed.run();
 </script>
