--- a/testinstagram.html
+++ b/testinstagram.html
@@ -295,13 +295,17 @@ Come spend a lovely Mothering Sunday with us.
 </DIV>
 -->
  
-
-<DIV class="boxPanel">
- <TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0019-thumb.jpg" alt="AndyBGoode"></a></TD>
-<TD><DIV class="boxHeading">Recent Instagram Photos</DIV></TD></TR>
+ 
+ 
+<br/>
+ 
+<DIV class="boxPanelDoubleWidthNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD><DIV class="boxHeading">Recent Instagram Photos</DIV></TD></TR>
 </TABLE>
+<P>
 <div id="instafeed"></div>
+ </P>
 </DIV>
  
  
@@ -311,7 +315,7 @@ Come spend a lovely Mothering Sunday with us.
         get: 'user',
         userId: '3153218281',
         accessToken: '3153218281.1677ed0.a7ca15e521d244b69f85ef6fa1a54ba4',
-        limit: 10
+        limit: 16
     });
     userFeed.run();
 </script>
