--- a/testinstagram.html
+++ b/testinstagram.html
@@ -299,7 +299,7 @@ Come spend a lovely Mothering Sunday with us.
  
 <br/>
  
-<DIV class="boxPanelDoubleWidthNoBorder">
+<DIV class="boxPanelDoubleWidth">
 <TABLE class='boxHeadingArea'>
 <TR><TD><DIV class="boxHeading">Recent Instagram Photos</DIV></TD></TR>
 </TABLE>
@@ -315,7 +315,7 @@ Come spend a lovely Mothering Sunday with us.
         get: 'user',
         userId: '3153218281',
         accessToken: '3153218281.1677ed0.a7ca15e521d244b69f85ef6fa1a54ba4',
-        limit: 16
+        limit: 15
     });
     userFeed.run();
 </script>
