--- a/testinstagram.html
+++ b/testinstagram.html
@@ -301,7 +301,7 @@ Come spend a lovely Mothering Sunday with us.
  
 <DIV class="boxPanelDoubleWidth">
 <TABLE class='boxHeadingArea'>
-<TR><TD><DIV class="boxHeading">Recent Instagram Photos</DIV></TD></TR>
+<TR><TD><DIV class="boxHeading">MY RECENT INSTAGRAM POSTS:</DIV></TD></TR>
 <TR><TD><div id="instafeed"></div></TD></TR>
 </TABLE>
 </DIV>
