--- a/testinstagram.html
+++ b/testinstagram.html
@@ -207,66 +207,22 @@ Or click to download each mp3 for free.<br/>
 </P>
 </DIV>
 
-
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></td>
-<td><DIV class="boxHeading">UPCOMING PUBLIC GIGS: JUNE/JULY</DIV></td></tr>
+<td><DIV class="boxHeading">UPCOMING PUBLIC GIGS:</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
 I am delighted to announce some public gigs where vintage classics will be the order of the day. 
 Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony). 
 </P>
 <P class='boxInfoArea'>
-24 June 2017 10am till 3pm, Swadlincote Town Centre,
+30 Sept 2017 10am till 2pm, Swadlincote Town Centre,
 Makers Market (ABG)
 </P>
 <P class='boxInfoArea'>
-8 July 2017 12 till 5pm, Norton Juxta Twycross,
-NJT Village Fete, 10 Orton Lane, Norton Juxta Twycross (ABG + Sophie)
-</P>
-<P class='boxInfoArea'>
-9 July 2017 11 till 3pm, Smethwick,
-Vintage in the Park Vintage Fair, B67 5DP (ABG)
-</P>
-<P class='boxInfoArea'>
-15 July 2017 Time TBC, Lichfield,
-Lichfield Fringe Festival (Jays)
-</P>
-<P class='boxInfoArea'>
-22 July 2017 10 till 2pm, Polesworth,
-Yesteryear Vintage Fair, B78 1QT (ABG)
-</P>
-<P class='boxInfoArea'>
-23 July 2017 12 till 4pm, Tamworth,
-Tamworth Bandstand (Jays)
-</P class='boxInfoArea'>
-<P class='boxInfoArea'>
-ABG: Andy B Goode solo gig.<br/>
-Jays: Andy B Goode and The Jays Vintage gig.
-</P class='boxInfoArea'>
-</DIV>
-
-
-<DIV class="boxPanel">
-<TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0020-thumb.jpg" alt="AndyBGoode"></a></td>
-<td><DIV class="boxHeading">UPCOMING PUBLIC GIGS: AUGUST+</DIV></td></tr>
-</TABLE>
-<P class='boxInfoArea'>
-Heres some more public gigs from August 2017 and beyond.
-</P>
-<P class='boxInfoArea'>
-20 August 2017 Time TBC, Loughborough,
-Vintage Festival with Loughborough Loves Vintage (Jays)
-</P>
-<P class='boxInfoArea'>
-26 August 2017 10am till 3pm, Swadlincote Town Centre,
-Makers Market (ABG)
-</P>
-<P class='boxInfoArea'>
-30 Sept 2017 10am till 3pm, Swadlincote Town Centre,
-Makers Market (ABG)
+15 Oct 2017 10am till 2:3pm, Swadlincote Town Centre,
+International Food Fair (Jays)
 </P>
 <P class='boxInfoArea'>
 26 Nov 2017 Late Afternoon, Tamworth St Edithas Square,
@@ -275,8 +231,9 @@ Tamworth Xmas Lights (Jays)
 <P class='boxInfoArea'>
 ABG: Andy B Goode solo gig.<br/>
 Jays: Andy B Goode and The Jays Vintage gig.
-</P class='boxInfoArea'>
+</P>
 </DIV>
+
 
 <!--
 <DIV class="boxPanel">
@@ -301,7 +258,7 @@ Come spend a lovely Mothering Sunday with us.
  
 <DIV class="boxPanelDoubleWidth">
 <TABLE class='boxHeadingArea'>
-<TR><TD><DIV class="boxHeading">MY RECENT INSTAGRAM POSTS:</DIV></TD></TR>
+<TR><TD><DIV class="boxHeading">RECENT INSTAGRAM POSTS (from 'Andy B Goode' and 'The Jays Vintage')</DIV></TD></TR>
 <TR><TD><div id="instafeed"></div></TD></TR>
 </TABLE>
 </DIV>
