--- a/testinstagram.html
+++ b/testinstagram.html
@@ -207,7 +207,7 @@ Or click to download each mp3 for free.<br/>
 </P>
 </DIV>
 
-<DIV class="boxPanel">
+<DIV class="boxPanelDoubleWidth">
 <TABLE class='boxHeadingArea'>
 <tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></td>
 <td><DIV class="boxHeading">UPCOMING PUBLIC GIGS:</DIV></td></tr>
@@ -217,12 +217,31 @@ I am delighted to announce some public gigs where vintage classics will be the o
 Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony). 
 </P>
 <P class='boxInfoArea'>
+9 Sept 2017 2pm>6pm, The Fox and Dogs Pub, Warton, 
+Charity Truck Pull (ABG)
+</P>
+<P class='boxInfoArea'>
 30 Sept 2017 10am till 2pm, Swadlincote Town Centre,
 Makers Market (ABG)
 </P>
 <P class='boxInfoArea'>
-15 Oct 2017 10am till 2:3pm, Swadlincote Town Centre,
+24 Sept 2017 11:30am till 4pm, Rubery Vintage Fair (ABG)
+</P>
+<P class='boxInfoArea'>
+1 Oct 2017 3pm, Southam Town Centre, 
+Rock n Roll Day (ABG)
+</P>
+<P class='boxInfoArea'>
+14 Oct 2017 9pm, Warton Club, Warton, 
+Rock n Roll / Swing Night (ABG)
+</P>
+<P class='boxInfoArea'>
+15 Oct 2017 10am till 2:30pm, Swadlincote Town Centre,
 International Food Fair (Jays)
+</P>
+<P class='boxInfoArea'>
+28 Oct 2017 12>3pm, Summerhouse Bakery, Burton Market Hall, 
+3rd Anniversary afternoon (ABG)
 </P>
 <P class='boxInfoArea'>
 26 Nov 2017 Late Afternoon, Tamworth St Edithas Square,
