--- a/testinstagram.html
+++ b/testinstagram.html
@@ -209,15 +209,18 @@ Or click to download each mp3 for free.<br/>
 
 <DIV class="boxPanelDoubleWidth">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></td>
-<td><DIV class="boxHeading">UPCOMING PUBLIC GIGS:</DIV></td></tr>
+<tr>
+<td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></td>
+<td><DIV class="boxHeading">UPCOMING PUBLIC GIGS:</DIV></td>
+<td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0020-thumb.jpg" alt="AndyBGoode"></a></td>
+</tr>
 </TABLE>
 <P class='boxInfoArea'>
 I am delighted to announce some public gigs where vintage classics will be the order of the day. 
 Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony). 
 </P>
 <P class='boxInfoArea'>
-9 Sept 2017 2pm>6pm, The Fox and Dogs Pub, Warton, 
+9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, 
 Charity Truck Pull (ABG)
 </P>
 <P class='boxInfoArea'>
@@ -240,7 +243,7 @@ Rock n Roll / Swing Night (ABG)
 International Food Fair (Jays)
 </P>
 <P class='boxInfoArea'>
-28 Oct 2017 12>3pm, Summerhouse Bakery, Burton Market Hall, 
+28 Oct 2017 12 till 3pm, Summerhouse Bakery, Burton Market Hall, 
 3rd Anniversary afternoon (ABG)
 </P>
 <P class='boxInfoArea'>
@@ -248,8 +251,7 @@ International Food Fair (Jays)
 Tamworth Xmas Lights (Jays)
 </P>
 <P class='boxInfoArea'>
-ABG: Andy B Goode solo gig.<br/>
-Jays: Andy B Goode and The Jays Vintage gig.
+'ABG': Andy B Goode solo gig ... 'Jays': Andy B Goode and The Jays Vintage gig.
 </P>
 </DIV>
 
@@ -315,7 +317,7 @@ Come spend a lovely Mothering Sunday with us.
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
 <li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>
-<li id="liWebsite">Version: v2.2.0</li>
+<li id="liWebsite">Version: v2.3.0</li>
 </ul>
 </DIV>
 <DIV class="boxPanelNoBorder">
