Instagram Feed added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
   <meta itemprop="genre" content="Rock n Roll" />
   <meta itemprop="keywords" content="Andy B Goode, AndyBGoode, Rock n Roll, Rock and Roll, Singer, Entertainer, Tamworth, Staffordshire, England, UK, Vintage, Classic" />
 </div>
-
+<script type="text/javascript" src="misc/instafeed.min.js"></script>
+ 
 
 <h1><img id="logo" src="images/logo.gif" alt="AndyBGoode Logo"> Andy B Goode</h1>
 
@@ -206,76 +207,54 @@ Or click to download each mp3 for free.<br/>
 </P>
 </DIV>
 
-
-<DIV class="boxPanel">
+<DIV class="boxPanelDoubleWidth">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></td>
-<td><DIV class="boxHeading">UPCOMING PUBLIC GIGS: JUNE/JULY</DIV></td></tr>
+<tr>
+<td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></td>
+<td><DIV class="boxHeading">UPCOMING PUBLIC GIGS:</DIV></td>
+<td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0020-thumb.jpg" alt="AndyBGoode"></a></td>
+</tr>
 </TABLE>
 <P class='boxInfoArea'>
 I am delighted to announce some public gigs where vintage classics will be the order of the day. 
 Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony). 
 </P>
 <P class='boxInfoArea'>
-24 June 2017 10am till 3pm, Swadlincote Town Centre,
+9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, 
+Charity Truck Pull (ABG)
+</P>
+<P class='boxInfoArea'>
+24 Sept 2017 11:30am till 4pm, Rubery Vintage Fair (ABG)
+</P>
+<P class='boxInfoArea'>
+30 Sept 2017 10am till 2pm, Swadlincote Town Centre,
 Makers Market (ABG)
 </P>
 <P class='boxInfoArea'>
-8 July 2017 12 till 5pm, Norton Juxta Twycross,
-NJT Village Fete, 10 Orton Lane, Norton Juxta Twycross (ABG + Sophie)
+1 Oct 2017 3pm, Southam Town Centre, 
+Rock n Roll Day (ABG)
 </P>
 <P class='boxInfoArea'>
-9 July 2017 11 till 3pm, Smethwick,
-Vintage in the Park Vintage Fair, B67 5DP (ABG)
+14 Oct 2017 9pm, Warton Club, Warton, 
+Rock n Roll / Swing Night (ABG)
 </P>
 <P class='boxInfoArea'>
-15 July 2017 Time TBC, Lichfield,
-Lichfield Fringe Festival (Jays)
+15 Oct 2017 10am till 2:30pm, Swadlincote Town Centre,
+International Food Fair (Jays)
 </P>
 <P class='boxInfoArea'>
-22 July 2017 10 till 2pm, Polesworth,
-Yesteryear Vintage Fair, B78 1QT (ABG)
-</P>
-<P class='boxInfoArea'>
-23 July 2017 12 till 4pm, Tamworth,
-Tamworth Bandstand (Jays)
-</P class='boxInfoArea'>
-<P class='boxInfoArea'>
-ABG: Andy B Goode solo gig.<br/>
-Jays: Andy B Goode and The Jays Vintage gig.
-</P class='boxInfoArea'>
-</DIV>
-
-
-<DIV class="boxPanel">
-<TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0020-thumb.jpg" alt="AndyBGoode"></a></td>
-<td><DIV class="boxHeading">UPCOMING PUBLIC GIGS: AUGUST+</DIV></td></tr>
-</TABLE>
-<P class='boxInfoArea'>
-Heres some more public gigs from August 2017 and beyond.
-</P>
-<P class='boxInfoArea'>
-20 August 2017 Time TBC, Loughborough,
-Vintage Festival with Loughborough Loves Vintage (Jays)
-</P>
-<P class='boxInfoArea'>
-26 August 2017 10am till 3pm, Swadlincote Town Centre,
-Makers Market (ABG)
-</P>
-<P class='boxInfoArea'>
-30 Sept 2017 10am till 3pm, Swadlincote Town Centre,
-Makers Market (ABG)
+28 Oct 2017 12 till 3pm, Summerhouse Bakery, Burton Market Hall, 
+3rd Anniversary afternoon (ABG)
 </P>
 <P class='boxInfoArea'>
 26 Nov 2017 Late Afternoon, Tamworth St Edithas Square,
 Tamworth Xmas Lights (Jays)
 </P>
 <P class='boxInfoArea'>
-ABG: Andy B Goode solo gig.<br/>
-Jays: Andy B Goode and The Jays Vintage gig.
-</P class='boxInfoArea'>
+'ABG': Andy B Goode solo gig ... 'Jays': Andy B Goode and The Jays Vintage gig.
+</P>
 </DIV>
+
 
 <!--
 <DIV class="boxPanel">
@@ -293,7 +272,35 @@ Come spend a lovely Mothering Sunday with us.
 </P>
 </DIV>
 -->
+ 
+ 
+ 
+<br/>
+ 
+<DIV class="boxPanelDoubleWidth">
+<TABLE class='boxHeadingArea'>
+<TR><TD><DIV class="boxHeading">RECENT INSTAGRAM POSTS (from 'Andy B Goode' and 'The Jays Vintage')</DIV></TD></TR>
+<TR><TD><div id="instafeed"></div></TD></TR>
+</TABLE>
+</DIV>
+ 
+ 
+ 
+<script type="text/javascript">
+ var ajb1 = '3153218281.1677ed0.';
+ var ajb2 = 'a7ca15e521d244b69f85ef6fa1a54ba4';
+ var ajb3 = ajb1+ajb2;
+    var userFeed = new Instafeed({
+        get: 'user',
+        userId: '3153218281',
+        accessToken: ajb3,
+        limit: 15
+    });
+    userFeed.run();
+</script>
+ 
 
+ 
 </div>
 </div>
 
@@ -310,7 +317,7 @@ Come spend a lovely Mothering Sunday with us.
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
 <li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>
-<li id="liWebsite">Version: v2.2.0</li>
+<li id="liWebsite">Version: v2.3.0</li>
 </ul>
 </DIV>
 <DIV class="boxPanelNoBorder">
