--- a/testinstagram.html
+++ b/testinstagram.html
@@ -219,6 +219,12 @@ Or click to download each mp3 for free.<br/>
 I am delighted to announce some public gigs where vintage classics will be the order of the day. 
 Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony). 
 </P>
+<ul id="contactList">
+<li>9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, Charity Truck Pull (ABG)</li>
+<li>9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, Charity Truck Pull (ABG)</li>
+<li>9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, Charity Truck Pull (ABG)</li>
+</ul>
+ 
 <P class='boxInfoArea'>
 9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, 
 Charity Truck Pull (ABG)
@@ -251,7 +257,8 @@ International Food Fair (Jays)
 Tamworth Xmas Lights (Jays)
 </P>
 <P class='boxInfoArea'>
-'ABG': Andy B Goode solo gig ... 'Jays': Andy B Goode and The Jays Vintage gig.
+'ABG': Andy B Goode solo gig
+ 'Jays': Andy B Goode and The Jays Vintage gig.
 </P>
 </DIV>
 
@@ -294,7 +301,8 @@ Come spend a lovely Mothering Sunday with us.
         get: 'user',
         userId: '3153218281',
         accessToken: ajb3,
-        limit: 15
+        limit: 15,
+     resolution: low_resolution
     });
     userFeed.run();
 </script>
