--- a/testinstagram.html
+++ b/testinstagram.html
@@ -219,23 +219,12 @@ Or click to download each mp3 for free.<br/>
 I am delighted to announce some public gigs where vintage classics will be the order of the day. 
 Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony). 
 </P>
-<ul id="contactList">
+<ul>
 <li>9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, Charity Truck Pull (ABG)</li>
-<li>9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, Charity Truck Pull (ABG)</li>
-<li>9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, Charity Truck Pull (ABG)</li>
+<li>24 Sept 2017 11:30am till 4pm, Rubery Vintage Fair (ABG)</li>
+<li>30 Sept 2017 10am till 2pm, Swadlincote Town Centre, Makers Market (ABG)</li>
 </ul>
  
-<P class='boxInfoArea'>
-9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, 
-Charity Truck Pull (ABG)
-</P>
-<P class='boxInfoArea'>
-24 Sept 2017 11:30am till 4pm, Rubery Vintage Fair (ABG)
-</P>
-<P class='boxInfoArea'>
-30 Sept 2017 10am till 2pm, Swadlincote Town Centre,
-Makers Market (ABG)
-</P>
 <P class='boxInfoArea'>
 1 Oct 2017 3pm, Southam Town Centre, 
 Rock n Roll Day (ABG)
@@ -257,8 +246,8 @@ International Food Fair (Jays)
 Tamworth Xmas Lights (Jays)
 </P>
 <P class='boxInfoArea'>
-'ABG': Andy B Goode solo gig
- 'Jays': Andy B Goode and The Jays Vintage gig.
+'ABG': Andy B Goode solo gig<br/>
+'Jays': Andy B Goode and The Jays Vintage gig.
 </P>
 </DIV>
 
@@ -302,7 +291,7 @@ Come spend a lovely Mothering Sunday with us.
         userId: '3153218281',
         accessToken: ajb3,
         limit: 15,
-     resolution: low_resolution
+     resolution: 'standard_resolution'
     });
     userFeed.run();
 </script>
