--- a/testinstagram.html
+++ b/testinstagram.html
@@ -207,6 +207,8 @@ Or click to download each mp3 for free.<br/>
 </P>
 </DIV>
 
+<br/>
+ 
 <DIV class="boxPanelDoubleWidth">
 <TABLE class='boxHeadingArea'>
 <tr>
@@ -223,28 +225,12 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 <li>9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, Charity Truck Pull (ABG)</li>
 <li>24 Sept 2017 11:30am till 4pm, Rubery Vintage Fair (ABG)</li>
 <li>30 Sept 2017 10am till 2pm, Swadlincote Town Centre, Makers Market (ABG)</li>
+<li>1 Oct 2017 3pm, Southam Town Centre, Rock n Roll Day (ABG)</li>
+<li>14 Oct 2017 9pm, Warton Club, Warton, Rock n Roll / Swing Night (ABG)</li>
+<li>15 Oct 2017 10am till 2:30pm, Swadlincote Town Centre, International Food Fair (Jays)</li>
+<li>28 Oct 2017 12 till 3pm, Summerhouse Bakery, Burton Market Hall, Anniversary afternoon (ABG)</li>
+<li>26 Nov 2017 4pm ish Tamworth St Edithas Square, Headlining Tamworth Xmas Lights (Jays)</li>
 </ul>
- 
-<P class='boxInfoArea'>
-1 Oct 2017 3pm, Southam Town Centre, 
-Rock n Roll Day (ABG)
-</P>
-<P class='boxInfoArea'>
-14 Oct 2017 9pm, Warton Club, Warton, 
-Rock n Roll / Swing Night (ABG)
-</P>
-<P class='boxInfoArea'>
-15 Oct 2017 10am till 2:30pm, Swadlincote Town Centre,
-International Food Fair (Jays)
-</P>
-<P class='boxInfoArea'>
-28 Oct 2017 12 till 3pm, Summerhouse Bakery, Burton Market Hall, 
-3rd Anniversary afternoon (ABG)
-</P>
-<P class='boxInfoArea'>
-26 Nov 2017 Late Afternoon, Tamworth St Edithas Square,
-Tamworth Xmas Lights (Jays)
-</P>
 <P class='boxInfoArea'>
 'ABG': Andy B Goode solo gig<br/>
 'Jays': Andy B Goode and The Jays Vintage gig.
@@ -291,7 +277,7 @@ Come spend a lovely Mothering Sunday with us.
         userId: '3153218281',
         accessToken: ajb3,
         limit: 15,
-     resolution: 'standard_resolution'
+     resolution: 'low_resolution'
     });
     userFeed.run();
 </script>
