--- a/testinstagram.html
+++ b/testinstagram.html
@@ -259,7 +259,7 @@ Come spend a lovely Mothering Sunday with us.
  
 <br/>
  
-<DIV class="boxPanelDoubleWidth">
+<DIV class="boxPanelFullWidth">
 <TABLE class='boxHeadingArea'>
 <TR><TD><DIV class="boxHeading">RECENT INSTAGRAM POSTS (from 'Andy B Goode' and 'The Jays Vintage')</DIV></TD></TR>
 <TR><TD><div id="instafeed"></div></TD></TR>
