--- a/testinstagram.html
+++ b/testinstagram.html
@@ -181,9 +181,10 @@ Loads of vintage fashion (both used and new). Hunt through collectables and othe
 <P class='boxInfoArea'>
 Right now, I am offering gigs starting at just:<br/>
 £100 + travel expenses for a 1h performance.<br/>
-<!--Remember at this time of year, this could be used to bring some xmas cheer vintage style.<br/> -->
+Remember this could be used to bring some xmas cheer vintage style.<br/>
 This could be used to bring some vintage fun to a 70th/80th birthday or even a 50th Wedding Anniversay.<br/>
-Limited time offer, Terms and conditions apply.
+Limited time offer.<br/>
+Terms and conditions apply.
 </P>
 </DIV>
 
