Larger Instagram + Bullets on Events

--- a/index.html
+++ b/index.html
@@ -181,9 +181,10 @@ Loads of vintage fashion (both used and new). Hunt through collectables and othe
 <P class='boxInfoArea'>
 Right now, I am offering gigs starting at just:<br/>
 £100 + travel expenses for a 1h performance.<br/>
-<!--Remember at this time of year, this could be used to bring some xmas cheer vintage style.<br/> -->
+Remember this could be used to bring some xmas cheer vintage style.<br/>
 This could be used to bring some vintage fun to a 70th/80th birthday or even a 50th Wedding Anniversay.<br/>
-Limited time offer, Terms and conditions apply.
+Limited time offer.<br/>
+Terms and conditions apply.
 </P>
 </DIV>
 
@@ -207,6 +208,8 @@ Or click to download each mp3 for free.<br/>
 </P>
 </DIV>
 
+<br/>
+ 
 <DIV class="boxPanelDoubleWidth">
 <TABLE class='boxHeadingArea'>
 <tr>
@@ -219,39 +222,19 @@ Or click to download each mp3 for free.<br/>
 I am delighted to announce some public gigs where vintage classics will be the order of the day. 
 Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony). 
 </P>
+<ul>
+<li>9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, Charity Truck Pull (ABG)</li>
+<li>24 Sept 2017 11:30am till 4pm, Rubery Vintage Fair (ABG)</li>
+<li>30 Sept 2017 10am till 2pm, Swadlincote Town Centre, Makers Market (ABG)</li>
+<li>1 Oct 2017 3pm, Southam Town Centre, Rock n Roll Day (ABG)</li>
+<li>14 Oct 2017 9pm, Warton Club, Warton, Rock n Roll / Swing Night (ABG)</li>
+<li>15 Oct 2017 10am till 2:30pm, Swadlincote Town Centre, International Food Fair (Jays)</li>
+<li>28 Oct 2017 12 till 3pm, Summerhouse Bakery, Burton Market Hall, Anniversary afternoon (ABG)</li>
+<li>26 Nov 2017 4pm ish Tamworth St Edithas Square, Headlining Tamworth Xmas Lights (Jays)</li>
+</ul>
 <P class='boxInfoArea'>
-9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, 
-Charity Truck Pull (ABG)
-</P>
-<P class='boxInfoArea'>
-24 Sept 2017 11:30am till 4pm, Rubery Vintage Fair (ABG)
-</P>
-<P class='boxInfoArea'>
-30 Sept 2017 10am till 2pm, Swadlincote Town Centre,
-Makers Market (ABG)
-</P>
-<P class='boxInfoArea'>
-1 Oct 2017 3pm, Southam Town Centre, 
-Rock n Roll Day (ABG)
-</P>
-<P class='boxInfoArea'>
-14 Oct 2017 9pm, Warton Club, Warton, 
-Rock n Roll / Swing Night (ABG)
-</P>
-<P class='boxInfoArea'>
-15 Oct 2017 10am till 2:30pm, Swadlincote Town Centre,
-International Food Fair (Jays)
-</P>
-<P class='boxInfoArea'>
-28 Oct 2017 12 till 3pm, Summerhouse Bakery, Burton Market Hall, 
-3rd Anniversary afternoon (ABG)
-</P>
-<P class='boxInfoArea'>
-26 Nov 2017 Late Afternoon, Tamworth St Edithas Square,
-Tamworth Xmas Lights (Jays)
-</P>
-<P class='boxInfoArea'>
-'ABG': Andy B Goode solo gig ... 'Jays': Andy B Goode and The Jays Vintage gig.
+'ABG': Andy B Goode solo gig<br/>
+'Jays': Andy B Goode and The Jays Vintage gig.
 </P>
 </DIV>
 
@@ -277,7 +260,7 @@ Come spend a lovely Mothering Sunday with us.
  
 <br/>
  
-<DIV class="boxPanelDoubleWidth">
+<DIV class="boxPanelFullWidth">
 <TABLE class='boxHeadingArea'>
 <TR><TD><DIV class="boxHeading">RECENT INSTAGRAM POSTS (from 'Andy B Goode' and 'The Jays Vintage')</DIV></TD></TR>
 <TR><TD><div id="instafeed"></div></TD></TR>
@@ -285,19 +268,6 @@ Come spend a lovely Mothering Sunday with us.
 </DIV>
  
  
- 
-<script type="text/javascript">
- var ajb1 = '3153218281.1677ed0.';
- var ajb2 = 'a7ca15e521d244b69f85ef6fa1a54ba4';
- var ajb3 = ajb1+ajb2;
-    var userFeed = new Instafeed({
-        get: 'user',
-        userId: '3153218281',
-        accessToken: ajb3,
-        limit: 15
-    });
-    userFeed.run();
-</script>
  
 
  
@@ -317,7 +287,7 @@ Come spend a lovely Mothering Sunday with us.
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
 <li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>
-<li id="liWebsite">Version: v2.3.0</li>
+<li id="liWebsite">Version: v2.3.1</li>
 </ul>
 </DIV>
 <DIV class="boxPanelNoBorder">
@@ -343,6 +313,20 @@ Come spend a lovely Mothering Sunday with us.
 
 
 </div>
+ 
+<script type="text/javascript">
+ var ajb1 = '3153218281.1677ed0.';
+ var ajb2 = 'a7ca15e521d244b69f85ef6fa1a54ba4';
+ var ajb3 = ajb1+ajb2;
+    var userFeed = new Instafeed({
+        get: 'user',
+        userId: '3153218281',
+        accessToken: ajb3,
+        limit: 10,
+     resolution: 'low_resolution'
+    });
+    userFeed.run();
+</script> 
 </body>
 
 </html>
