--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@ I am delighted to announce some public gigs where vintage classics will be the o
 Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony). 
 </P>
 <ul>
-<li>9 Sept 2017 2pm till 6pm, The Fox and Dogs Pub, Warton, Charity Truck Pull (ABG)</li>
-<li>24 Sept 2017 11:30am till 4pm, Rubery Vintage Fair (ABG)</li>
-<li>30 Sept 2017 10am till 2pm, Swadlincote Town Centre, Makers Market (ABG)</li>
-<li>1 Oct 2017 3pm, Southam Town Centre, Rock n Roll Day (ABG)</li>
-<li>14 Oct 2017 9pm, Warton Club, Warton, Rock n Roll / Swing Night (ABG)</li>
-<li>15 Oct 2017 10am till 2:30pm, Swadlincote Town Centre, International Food Fair (Jays)</li>
-<li>28 Oct 2017 12 till 3pm, Summerhouse Bakery, Burton Market Hall, Anniversary afternoon (ABG)</li>
-<li>26 Nov 2017 4pm ish Tamworth St Edithas Square, Headlining Tamworth Xmas Lights (Jays)</li>
+<li>9 Sept 2017 Saturday 2pm till 6pm, The Fox and Dogs Pub, Warton, Charity Truck Pull (ABG)</li>
+<li>24 Sept 2017 Sunday 11:30am till 4pm, Rubery Vintage Fair (ABG)</li>
+<li>30 Sept 2017 Saturday 10am till 2pm, Swadlincote Town Centre, Makers Market (ABG)</li>
+<li>1 Oct 2017 Sunday 3pm, Southam Town Centre, Rock n Roll Day (ABG)</li>
+<li>14 Oct 2017 Saturday 9pm, Warton Club, Warton, Rock n Roll / Swing Night (ABG)</li>
+<li>15 Oct 2017 Sunday 10am till 2:30pm, Swadlincote Town Centre, International Food Fair (Jays)</li>
+<li>28 Oct 2017 Saturday 12 till 3pm, Summerhouse Bakery, Burton Market Hall, Anniversary afternoon (ABG)</li>
+<li>26 Nov 2017 Sunday 4pm ish Tamworth St Edithas Square, Headlining Tamworth Xmas Lights (Jays)</li>
 </ul>
 <P class='boxInfoArea'>
 'ABG': Andy B Goode solo gig<br/>
