--- a/testinstagram.html
+++ b/testinstagram.html
@@ -287,7 +287,7 @@ Come spend a lovely Mothering Sunday with us.
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
 <li id='liJays'>The Jays Vintage: <a href='http://www.TheJaysVintage.com'>The Jays Vintage</a></li>
-<li id="liWebsite">Version: v2.3.2</li>
+<li id="liWebsite">Version: v2.3.3</li>
 </ul>
 </DIV>
 <DIV class="boxPanelNoBorder">
@@ -323,7 +323,8 @@ Come spend a lovely Mothering Sunday with us.
         userId: '3153218281',
         accessToken: ajb3,
         limit: 12,
-     resolution: 'low_resolution'
+        resolution: 'low_resolution',
+        template: '<a href="{{link}}"><img src="{{image}}" /></a>'
     });
     userFeed.run();
 </script> 
