--- a/testinstagram.html
+++ b/testinstagram.html
@@ -324,7 +324,7 @@ Come spend a lovely Mothering Sunday with us.
         accessToken: ajb3,
         limit: 12,
         resolution: 'low_resolution',
-        template: '<a href="{{link}}"><img src="{{image}}" /></a>'
+        template: '<a href="{{link}}"> <img width="250" src="{{image}}"/></a>'
     });
     userFeed.run();
 </script> 
