--- a/testinstagram.html
+++ b/testinstagram.html
@@ -324,7 +324,7 @@ Come spend a lovely Mothering Sunday with us.
         accessToken: ajb3,
         limit: 12,
         resolution: 'low_resolution',
-        template: '<a href="{{link}}"> <img width="260" src="{{image}}" alt="{{location}} {{caption}}"/></a>'
+        template: '<a href="{{link}}"> <img width="260" src="{{image}}" alt="({{location}}) {{caption}}"/></a>'
     });
     userFeed.run();
 </script> 
