--- a/testinstagram.html
+++ b/testinstagram.html
@@ -321,7 +321,7 @@ Come spend a lovely Mothering Sunday with us.
     var userFeed = new Instafeed({
         get: 'user',
         userId: '3153218281',
-//        accessToken: ajb3,
+        accessToken: ajb3,
         limit: 12,
         resolution: 'low_resolution',
         template: '<a href="{{link}}"> <img width="260" src="{{image}}" alt="({{location}}) {{caption}}"/></a>'
