--- a/testinstagram.html
+++ b/testinstagram.html
@@ -208,36 +208,6 @@ Or click to download each mp3 for free.<br/>
 </P>
 </DIV>
 
-<br/>
- 
-<DIV class="boxPanelDoubleWidth">
-<TABLE class='boxHeadingArea'>
-<tr>
-<td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></td>
-<td><DIV class="boxHeading">UPCOMING PUBLIC GIGS:</DIV></td>
-<td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0020-thumb.jpg" alt="AndyBGoode"></a></td>
-</tr>
-</TABLE>
-<P class='boxInfoArea'>
-I am delighted to announce some public gigs where vintage classics will be the order of the day. 
-Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony). 
-</P>
-<ul>
-<li>9 Sept 2017 Saturday 2pm till 6pm, Charity Truck Pull, The Fox and Dogs Pub, Warton, B79 0HU (ABG)</li>
-<li>24 Sept 2017 Sunday 11:30am till 4pm, Rubery Vintage Fair, Rubery Social Club, B45 9JW (ABG)</li>
-<li>30 Sept 2017 Saturday 10am till 2pm, Makers Market, Swadlincote Town Centre (ABG)</li>
-<li>1 Oct 2017 Sunday 3pm, Southam Retro Revival 2017, Southam Town Centre (ABG)</li>
-<li>14 Oct 2017 Saturday 9pm, Rock n Roll / Swing Night, Warton Club, Warton, B79 0HW (ABG)</li>
-<li>15 Oct 2017 Sunday 10am till 2:30pm, International Food Fair, Swadlincote Town Centre  (Jays)</li>
-<li>28 Oct 2017 Saturday 12 till 3pm, Aniversary afternoon, Summerhouse Bakery, Burton Market Hall, Burton-on-Trent, DE14 1HA (ABG)</li>
-<li>26 Nov 2017 Sunday 4pm ish Headlining Tamworth Xmas Lights, Tamworth, St Edithas Square (Jays)</li>
-</ul>
-<P class='boxInfoArea'>
-'ABG': Andy B Goode solo gig<br/>
-'Jays': Andy B Goode and The Jays Vintage gig.
-</P>
-</DIV>
-
 
 <!--
 <DIV class="boxPanel">
@@ -274,6 +244,47 @@ Come spend a lovely Mothering Sunday with us.
 </div>
 </div>
 
+ 
+ 
+ 
+<div id="events-area">
+<h2 id="events" class="banner">Upcoming Events</h2>
+<div class="textbox-area">
+
+ 
+<DIV class="boxPanelDoubleWidth">
+<TABLE class='boxHeadingArea'>
+<tr>
+<td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></td>
+<td><DIV class="boxHeading">UPCOMING PUBLIC GIGS:</DIV></td>
+<td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0020-thumb.jpg" alt="AndyBGoode"></a></td>
+</tr>
+</TABLE>
+<P class='boxInfoArea'>
+I am delighted to announce some public gigs where vintage classics will be the order of the day. 
+Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a> (1940s Vocal Harmony). 
+</P>
+<ul>
+<li>9 Sept 2017 Saturday 2pm till 6pm, Charity Truck Pull, The Fox and Dogs Pub, Warton, B79 0HU (ABG)</li>
+<li>24 Sept 2017 Sunday 11:30am till 4pm, Rubery Vintage Fair, Rubery Social Club, B45 9JW (ABG)</li>
+<li>30 Sept 2017 Saturday 10am till 2pm, Makers Market, Swadlincote Town Centre (ABG)</li>
+<li>1 Oct 2017 Sunday 3pm, Southam Retro Revival 2017, Southam Town Centre (ABG)</li>
+<li>14 Oct 2017 Saturday 9pm, Rock n Roll / Swing Night, Warton Club, Warton, B79 0HW (ABG)</li>
+<li>15 Oct 2017 Sunday 10am till 2:30pm, International Food Fair, Swadlincote Town Centre  (Jays)</li>
+<li>28 Oct 2017 Saturday 12 till 3pm, Aniversary afternoon, Summerhouse Bakery, Burton Market Hall, Burton-on-Trent, DE14 1HA (ABG)</li>
+<li>26 Nov 2017 Sunday 4pm ish Headlining Tamworth Xmas Lights, Tamworth, St Edithas Square (Jays)</li>
+</ul>
+<P class='boxInfoArea'>
+'ABG': Andy B Goode solo gig<br/>
+'Jays': Andy B Goode and The Jays Vintage gig.
+</P>
+</DIV>
+
+ 
+</div>
+</div>
+ 
+ 
 
 <div id="contact" class="contact-area">
 <h2 class="banner">Contact me</h2>
