--- a/testinstagram.html
+++ b/testinstagram.html
@@ -226,19 +226,6 @@ Come spend a lovely Mothering Sunday with us.
 </DIV>
 -->
  
- 
- 
-<br/>
- 
-<DIV class="boxPanelFullWidth">
-<TABLE class='boxHeadingArea'>
-<TR><TD><DIV class="boxHeading">RECENT INSTAGRAM POSTS (from 'Andy B Goode' and 'The Jays Vintage')</DIV></TD></TR>
-<TR><TD><div id="instafeed"></div></TD></TR>
-</TABLE>
-</DIV>
- 
- 
- 
 
  
 </div>
@@ -284,6 +271,26 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
 </div>
 </div>
  
+ 
+ 
+ 
+ 
+ 
+<div id="recent-area">
+<h2 id="recent" class="banner">Recent</h2>
+<div class="textbox-area">
+ 
+ 
+<DIV class="boxPanelFullWidth">
+<TABLE class='boxHeadingArea'>
+<TR><TD><DIV class="boxHeading">RECENT INSTAGRAM POSTS (from 'Andy B Goode' and 'The Jays Vintage')</DIV></TD></TR>
+<TR><TD><div id="instafeed"></div></TD></TR>
+</TABLE>
+</DIV>
+
+ 
+</div>
+</div>
  
 
 <div id="contact" class="contact-area">
