--- a/testinstagram.html
+++ b/testinstagram.html
@@ -276,8 +276,8 @@ Some are solo gigs and others with <a href="http://www.TheJaysVintage.com">'The 
  
  
  
-<div id="recent-area">
-<h2 id="recent" class="banner">Recent</h2>
+<div id="social-area">
+<h2 id="social" class="banner">Social Media</h2>
 <div class="textbox-area">
  
  
