--- a/testinstagram.html
+++ b/testinstagram.html
@@ -146,7 +146,29 @@
 </ul>
 </P>
 </DIV>
-
+ 
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0015-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">1940s Vocal Harmony Group</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+I am also part of a 1940s Vocal Harmony Group called <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>. 
+We sing delightful vintage tunes in the style of the Andrew's Sisters and other vintage harmony acts.
+</P>
+</DIV>
+  
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0005-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">1940s Solo Set</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+I am pleased to also now offer a solo 1940s set. 
+......
+</P>
+</DIV>
+ 
 </div>
 </div>
 
