--- a/testinstagram.html
+++ b/testinstagram.html
@@ -165,7 +165,12 @@ We sing delightful vintage tunes in the style of the Andrew's Sisters and other 
 </TABLE>
 <P class='boxInfoArea'>
 I am pleased to also now offer a solo 1940s set. 
-......
+<ul>
+<li>Crooner classics</li>
+<li>Wartime songs</li>
+<li>Sing along tunes</li>
+<li>Epic hits by: Nat King Cole, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Bing Crosby, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, Harry Connick Jr and many more.</li>
+</ul>
 </P>
 </DIV>
  
