--- a/testinstagram.html
+++ b/testinstagram.html
@@ -164,11 +164,12 @@ We sing delightful vintage tunes in the style of the Andrew's Sisters and other 
 <TD><DIV class="boxHeading">1940s Solo Set</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-I am pleased to also now offer a solo 1940s set. 
+I now offer a solo 1940s set. 
 <ul>
 <li>Crooner classics</li>
 <li>Wartime songs</li>
 <li>Sing along tunes</li>
+<li>1940s style outfit</li>
 <li>Epic hits by: Nat King Cole, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Bing Crosby, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, Harry Connick Jr and many more.</li>
 </ul>
 </P>
