--- a/testinstagram.html
+++ b/testinstagram.html
@@ -147,14 +147,19 @@
 </P>
 </DIV>
  
+ 
+<br/>
+ 
+ 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0015-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></TD>
 <TD><DIV class="boxHeading">1940s Vocal Harmony Group</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-I am also part of a 1940s Vocal Harmony Group called <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>. 
-We sing delightful vintage tunes in the style of the Andrew's Sisters and other vintage harmony acts.
+I'm also part of a 1940s Vocal Harmony Group called <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>.<br/>
+We sing delightful vintage tunes in the style of the Andrew's Sisters and other vintage harmony acts.<br/>
+Perfect for a 1940s event, Christmas or a vintage fayre.
 </P>
 </DIV>
   
@@ -270,7 +275,7 @@ Come spend a lovely Mothering Sunday with us.
 <DIV class="boxPanelDoubleWidth">
 <TABLE class='boxHeadingArea'>
 <tr>
-<td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></td>
+<td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0015-thumb.jpg" alt="AndyBGoode"></a></td>
 <td><DIV class="boxHeading">UPCOMING PUBLIC GIGS:</DIV></td>
 <td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0020-thumb.jpg" alt="AndyBGoode"></a></td>
 </tr>
