--- a/testinstagram.html
+++ b/testinstagram.html
@@ -119,7 +119,7 @@
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></TD>
-<TD><DIV class="boxHeading">Dynamic Rock n Roll Vocalist and Heartfelt Crooner</DIV></TD></TR>
+<TD><DIV class="boxHeading">Solo 1950s/1960s Rock and Roll Set</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
 <ul>
@@ -129,7 +129,26 @@
 </ul>
 </P>
 </DIV>
+ 
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0005-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">Solo 1940s Set</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+I now offer a solo 1940s set. 
+<ul>
+<li>Crooner classics</li>
+<li>Wartime songs</li>
+<li>Sing along tunes</li>
+<li>1940s style outfit</li>
+<li>Epic hits by: Nat King Cole, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Bing Crosby, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, Harry Connick Jr and many more.</li>
+</ul>
+</P>
+</DIV>
 
+ <br/>
+ 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0010-thumb.jpg" alt="AndyBGoode"></a></TD>
@@ -147,10 +166,6 @@
 </P>
 </DIV>
  
- 
-<br/>
- 
- 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0016-thumb.jpg" alt="AndyBGoode"></a></TD>
@@ -159,26 +174,10 @@
 <P class='boxInfoArea'>
 I'm also part of a 1940s Vocal Harmony Group called <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>.<br/>
 We sing delightful vintage tunes in the style of the Andrew's Sisters and other vintage harmony acts.<br/>
-Perfect for a 1940s event, Christmas or a vintage fayre.
+Perfect for a 1940s Event, Christmas, Food Festival or a Vintage Fair.
 </P>
 </DIV>
   
-<DIV class="boxPanel">
-<TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0005-thumb.jpg" alt="AndyBGoode"></a></TD>
-<TD><DIV class="boxHeading">1940s Solo Set</DIV></TD></TR>
-</TABLE>
-<P class='boxInfoArea'>
-I now offer a solo 1940s set. 
-<ul>
-<li>Crooner classics</li>
-<li>Wartime songs</li>
-<li>Sing along tunes</li>
-<li>1940s style outfit</li>
-<li>Epic hits by: Nat King Cole, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Bing Crosby, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, Harry Connick Jr and many more.</li>
-</ul>
-</P>
-</DIV>
  
 </div>
 </div>
