--- a/testinstagram.html
+++ b/testinstagram.html
@@ -125,7 +125,7 @@
 <ul>
 <li>Dynamic Rock n Roll Vocalist and Heartfelt Crooner</li>
 <li>Jive the night away to the energetic sounds those classic Rock n Roll songs.</li>
-<li>Fun 'Teddy boy' style outfit</li>
+<li>Fun 1950s 'Teddy boy' style outfit</li>
  <li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, Frank Sinatra, Dean Martin, The Platters, Michael Buble and many more.</li>
 </ul>
 </P>
@@ -173,8 +173,14 @@ I now offer a solo 1940s set.
 </TABLE>
 <P class='boxInfoArea'>
 I'm also part of a 1940s Vocal Harmony Group called <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>.<br/>
-We sing delightful vintage tunes in the style of the Andrew's Sisters and other vintage harmony acts.<br/>
-Perfect for a 1940s Event, Christmas, Food Festival or a Vintage Fair.
+We sing delightful vintage tunes in the style of the Andrew's Sisters and other vintage harmony acts while dressed in vintage style outfits.<br/>
+Perfect for:
+<ul>
+<li>1940s Event/li>
+<li>Christmas</li>
+<li>Food Festival</li>
+<li>Vintage Fair</li>
+</ul>
 </P>
 </DIV>
   
