--- a/testinstagram.html
+++ b/testinstagram.html
@@ -143,12 +143,12 @@ I now offer a solo 1940s set.
 <li>Wartime songs</li>
 <li>Sing along tunes</li>
 <li>1940s style outfit</li>
-<li>Epic hits by: Nat King Cole, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Bing Crosby, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, Harry Connick Jr and many more.</li>
+<li>Epic hits by: Nat King Cole, Bing Crosby, Al Bowlly, Vera Lynn, Cliff Edwards, James Baskett, Flanagan and Allen, Vaughn Monroe, George Formby, Frank Sinatra, Harry Connick Jr and many more.</li>
 </ul>
 </P>
 </DIV>
 
- <br/>
+<br/>
  
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
@@ -173,11 +173,11 @@ I now offer a solo 1940s set.
 </TABLE>
 <P class='boxInfoArea'>
 I'm also part of a 1940s Vocal Harmony Group called <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>.<br/>
-We sing delightful vintage tunes in the style of the Andrew's Sisters and other vintage harmony acts while dressed in vintage style outfits.<br/>
+We sing delightful vintage tunes in the style of the Bing Crosby and Andrew's Sisters while dressed in lovely vintage style outfits.<br/>
 Perfect for:
 <ul>
-<li>1940s Event/li>
-<li>Christmas</li>
+<li>1940s Event</li>
+<li>Christmas Event</li>
 <li>Food Festival</li>
 <li>Vintage Fair</li>
 </ul>
