--- a/testinstagram.html
+++ b/testinstagram.html
@@ -173,7 +173,7 @@ I now offer a solo 1940s set.
 </TABLE>
 <P class='boxInfoArea'>
 I'm also part of a 1940s Vocal Harmony Group called <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>.<br/>
-We sing delightful vintage tunes in the style of the Bing Crosby and Andrew's Sisters while dressed in lovely vintage style outfits.<br/>
+We sing delightful vintage tunes in the style of Bing Crosby and The Andrew's Sisters while dressed in lovely vintage style outfits.<br/>
 Perfect for:
 <ul>
 <li>1940s Event</li>
