--- a/testinstagram.html
+++ b/testinstagram.html
@@ -172,8 +172,9 @@ I now offer a solo 1940s set.
 <TD><DIV class="boxHeading">1940s Vocal Harmony Group</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-I'm also part of a 1940s Vocal Harmony Group called <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>.<br/>
-We sing delightful vintage tunes in the style of Bing Crosby and The Andrew's Sisters while dressed in lovely vintage style outfits.<br/>
+I'm also part of a 1940s Vocal Harmony Group named <a href="http://www.TheJaysVintage.com">'The Jays Vintage'</a>. 
+We sing delightful vintage tunes in the style of Bing Crosby and The Andrew's Sisters while dressed in lovely vintage style outfits. 
+We also offer combined 1940s + Andy B Goode 1950s/1960s Rock n Roll gigs.
 Perfect for:
 <ul>
 <li>1940s Event</li>
