--- a/testinstagram.html
+++ b/testinstagram.html
@@ -83,7 +83,7 @@
 <P class='boxInfoArea'>
 <ul>
 <li>1950s/60s Rock and Roll Singer.</li>
-<li>1940s/50s/60s Vintage Singer.</li>
+<li>1940s/50s/60s Vintage Entertainer.</li>
 <li>Swing Singer and Heartfelt Crooner.</li>
 <li>Let me enliven your events with some fun vintage 'Rock n Roll' music.</li>
 <li>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</li>
