--- a/testinstagram.html
+++ b/testinstagram.html
@@ -178,10 +178,10 @@ We sing delightful vintage tunes in the style of Bing Crosby and The Andrew's Si
 We also offer combined 1940s + Andy B Goode 1950s/1960s Rock n Roll gigs.
 Perfect for:
 <ul>
-<li>1940s Event</li>
-<li>Christmas Event</li>
-<li>Food Festival</li>
-<li>Vintage Fair</li>
+<li>1940s Events</li>
+<li>Christmas Events</li>
+<li>Food Festivals</li>
+<li>Vintage Fairs</li>
 </ul>
 </P>
 </DIV>
